--- a/gitops-k8sbootstrap/istio-setup/namespace.yaml
+++ b/gitops-k8sbootstrap/istio-setup/namespace.yaml
@@ -2,5 +2,6 @@ apiVersion: v1
 kind: Namespace
 metadata:
   labels:
-    name: istio-system
-  name: istio-system
+    name: istio-demo
+    istio-injection: enabled
+  name: istio-demo
