--- a/gitops-k8sbootstrap/devopstools/jenkins/servicemesh-values.yaml
+++ b/gitops-k8sbootstrap/devopstools/jenkins/servicemesh-values.yaml
@@ -135,7 +135,7 @@ master:
   # When setting runAsUser to a different value than 0 also set fsGroup to the same value:
   # runAsUser: <defaults to 0>
   # fsGroup: <will be omitted in deployment if runAsUser is 0>
-  servicePort: 80
+  servicePort: 8080
   targetPort: 80
   # For minikube, set this to NodePort, elsewhere use LoadBalancer
   # Use ClusterIP if your setup includes ingress controller
@@ -216,6 +216,7 @@ master:
     - credentials-binding:1.20
     - git:4.0.0
     - blueocean:1.21.0
+
   # Enable to always override the installed plugins with the values of 'master.installPlugins' on upgrade or redeployment.
   # overwritePlugins: true
   # Enable HTML parsing using OWASP Markup Formatter Plugin (antisamy-markup-formatter), useful with ghprb plugin.
@@ -320,8 +321,6 @@ master:
   # ref: https://kubernetes.io/docs/concepts/configuration/pod-priority-preemption/
   # priorityClass: system-cluster-critical
   podAnnotations: {}
-  # Add deployment annotation
-  deploymentAnnotations: {}
 
   # The below two configuration-related values are deprecated and replaced by Jenkins Configuration as Code (see above
   # JCasC key).  They will be deleted in an upcoming version.
@@ -343,14 +342,14 @@ master:
     apiVersion: "networking.k8s.io/v1beta1"
     labels: {}
     annotations: {}
-       kubernetes.io/ingress.class: istio
-    #   kubernetes.io/tls-acme: "true"
+    # kubernetes.io/ingress.class: nginx
+    # kubernetes.io/tls-acme: "true"
     # Set this path to jenkinsUriPrefix above or use annotations to rewrite path
     # path: "/jenkins"
     # configures the hostname e.g. jenkins.example.com
     hostName: jenkins.eqslearning.com
     tls:
-      - secretName: jenkins-selfsigned-cert-tls
+    # - secretName: jenkins.cluster.local
     #   hosts:
     #     - jenkins.cluster.local
 
