--- a/gitops-k8sbootstrap/argoapps/prod/harbor-helm.yaml
+++ b/gitops-k8sbootstrap/argoapps/prod/harbor-helm.yaml
@@ -10,9 +10,12 @@ spec:
 
   # Source of the application manifests
   source:
-    repoURL: https://github.com/naveenkumarsp/gitops-k8sbootstrap.git
-    targetRevision: HEAD
-    path: "devopstools/harbor"
+    repoURL: 'https://helm.goharbor.io'
+    targetRevision: 1.3.0
+    chart: harbor
+    helm:
+        valueFiles: 
+        - https://raw.githubusercontent.com/naveenkumarsp/gitops-k8sbootstrap/master/devopstools/harbor/prod-harbor-values.yml
 
   # Destination cluster and namespace to deploy the application
   destination:
