--- a/gitops-k8sbootstrap/devopstools/jenkins/prod-jenkins-values.yaml
+++ b/gitops-k8sbootstrap/devopstools/jenkins/prod-jenkins-values.yaml
@@ -475,7 +475,7 @@ agent:
   slaveConnectTimeout: 100
 
 persistence:
-  enabled: false
+  enabled: true
   ## A manually managed Persistent Volume and Claim
   ## Requires persistence.enabled: true
   ## If defined, PVC must be created manually before volume will be bound
