--- a/gitops-k8sbootstrap/argoapps/prod/jenkins-helm.yaml
+++ b/gitops-k8sbootstrap/argoapps/prod/jenkins-helm.yaml
@@ -18,7 +18,7 @@ spec:
   # Destination cluster and namespace to deploy the application
   destination:
     server: https://kubernetes.default.svc
-    namespace: default
+    namespace: devopstools
 
   # Sync policy
   syncPolicy:
