updated jenkins with project name

--- a/gitops-k8sbootstrap/argoapps/prod/jenkins-helm.yaml
+++ b/gitops-k8sbootstrap/argoapps/prod/jenkins-helm.yaml
@@ -5,7 +5,7 @@ metadata:
   # You'll usually want to add your resources to the argocd namespace.
   namespace: argocd
 spec:
-
+  project: default
   # Source of the application manifests
   source:
     repoURL: 'https://kubernetes-charts.storage.googleapis.com'
