--- a/applications/argoapps/hello-ci-demo-e2e.yaml
+++ b/applications/argoapps/hello-ci-demo-e2e.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: hello-ci-demo
+  name: hello-ci-demo-e2e
   # You'll usually want to add your resources to the argocd namespace.
   namespace: argocd
 
